# MuonDaq

./: CMakeLists.txt  DAQ.cpp  README.md  Test_RunNum.cpp  connect.cpp  connectBoard.cpp  daq.xml  impRootCommands.txt  main.cpp  main2.cpp  runDaq.cpp  setParameters.cpp  setparameters.cpp  startThreads.cpp  stop.cpp
TestData/: test.root
cmake/: FindTinyXml2.cmake
inc/: DSPAlgos.h  DataTree.h  common.txt  daq.h
src/: DSPAlgos.cpp  DataTree.cpp  common.txt  daq.cpp  daq.txt  xml.cpp
test/: Test_ReadConf.cpp  WaveForm.cpp  connect.cpp  connectBoard.cpp  setparameters.cpp  stop.cpp
test/DSP/: Test_SmoothWave.cpp  Test_Wave_DelT.cpp  Test_ZeroCrossing.cpp
